--- a/Walkthought Tutorial/webapp/manifest.json
+++ b/Walkthought Tutorial/webapp/manifest.json
@@ -41,6 +41,13 @@
 		"viewName": "ui5.walkthrough.view.App",
 		"type": "XML",
 		"id": "app"
+	},
+  "resources": {
+	  "css": [
+		{
+		  "uri": "css/style.css"
+		}
+	  ]
 	}
   }
 }
