--- a/Walkthought Tutorial/webapp/manifest.json
+++ b/Walkthought Tutorial/webapp/manifest.json
@@ -9,6 +9,15 @@
 	"type": "application",
 	"applicationVersion": {
 	  "version": "1.0.0"
+	},
+	"dataSources": {
+		"invoiceRemote": {
+			"uri": "V2/Northwind/Northwind.svc/",
+			"type": "OData",
+			"settings": {
+				"odataVersion": "2.0"
+			}
+		}
 	}
   },
   "sap.ui": {
@@ -36,10 +45,9 @@
 		  "fallbackLocale": ""
 		}
 	  },
-    "invoice": {
-      "type": "sap.ui.model.json.JSONModel",
-      "uri": "Invoices.json"
-    }
+	  "invoice": {
+		"dataSource": "invoiceRemote"
+	}
 	},
 	"rootView": {
 		"viewName": "ui5.walkthrough.view.App",
